<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/logo_margin_top"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/txt_ome2"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/logo_margin_top"
                android:layout_weight="1"
                android:background="@drawable/camlink" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ln1"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/banner"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/logo_margin_top"
            android:orientation="vertical">

            <TextView
                android:visibility="gone"
                android:id="@+id/login_text_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/divider_margin_top"
                android:layout_marginTop="@dimen/divider_margin_top"
                android:gravity="center"
                android:tag="Helvetica Neue.Medium.TTF"
                android:text="@string/login_error"
                android:textColor="@color/cerror"
                android:textSize="@dimen/small2_text" />

            <com.andreabaccega.widget.FormEditText
                whatever:testType="nocheck"
                whatever:emptyErrorString="This Field Cannot be Empty"
                android:inputType="textEmailAddress"
                android:id="@+id/login_email"
                android:layout_width="@dimen/ed_full_width"
                android:layout_height="@dimen/ed_full_height"
                android:textColor="@color/cwhite"
                android:layout_marginBottom="@dimen/divider_margin_top"
                android:layout_marginTop="@dimen/divider_margin_top"
                android:background="@drawable/rounded_rectangle_3_copy_4_register"
                android:paddingLeft="@dimen/drawable_padding"
                android:tag="Helvetica Neue.Regular.TTF"
                android:hint="@string/email"
                android:textColorHint="@color/cwhite"
                android:textSize="@dimen/heading1_text" />

            <com.andreabaccega.widget.FormEditText

                whatever:emptyErrorString="This Field Cannot be Empty"
                whatever:testType="nocheck"
                android:id="@+id/login_pass"
                android:layout_width="@dimen/ed_full_width"
                android:layout_height="@dimen/ed_full_height"
                android:layout_centerVertical="true"
                android:layout_marginBottom="@dimen/divider_margin_top"
                android:layout_marginTop="@dimen/divider_margin_top"
                android:background="@drawable/rounded_rectangle_3_copy_4_register"
                android:paddingLeft="@dimen/drawable_padding"
                android:inputType="textPassword"
                android:tag="Helvetica Neue.Regular.TTF"
                android:hint="@string/pass"
                android:textColor="@color/cwhite"
                android:textColorHint="@color/cwhite"
                android:textSize="@dimen/heading1_text"  />


            <LinearLayout

                android:id="@+id/ln2"
                android:layout_width="@dimen/ed_full_width"
                android:layout_height="@dimen/ed_full_height"
                android:layout_marginBottom="@dimen/divider_margin_top"
                android:layout_marginTop="@dimen/divider_margin_top"
                android:gravity="center"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/login_switch_stay_agree"
                    android:layout_width="@dimen/switch_full_width"
                    android:layout_height="@dimen/switch_full_height"
                    android:background="@drawable/tickbox_image_selector"
                    android:thumb="@android:color/transparent"
                    android:track="@android:color/transparent" />

                <TextView
                    android:id="@+id/login_text_stay_login_for"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/drawable_padding"
                    android:tag="Helvetica Neue.Light.TTF"
                    android:text="@string/stay_login"
                    android:textColor="@color/cstaylogin"
                    android:textSize="@dimen/small2_text"
                    android:textStyle="normal" />
            </LinearLayout>

            <Button
                android:id="@+id/login_reg_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_full_height"
                android:layout_gravity="center"
                android:background="@drawable/rounded_rectangle_3_copy_2_register"
                android:clickable="true"
                android:gravity="center"
                android:tag="Helvetica Neue.Light.TTF"
                android:text="@string/login"
                android:textColor="@color/cwhite"
                android:textSize="@dimen/heading1_text" />

            <LinearLayout
                android:id="@+id/ln3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/ed_bottom_margin"
                android:layout_marginTop="@dimen/ed_top_margin"
                android:orientation="horizontal">

                <TextView
                    android:visibility="gone"
                    android:id="@+id/login_forgtpass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:clickable="true"
                    android:gravity="left"
                    android:tag="Helvetica Neue.Light.TTF"
                    android:text="@string/forgot"
                    android:textColor="@color/cblue"
                    android:textSize="@dimen/heading1_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/login_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:tag="Helvetica Neue.Light.TTF"
                    android:text="@string/signup"
                    android:textColor="@color/cblue"
                    android:textSize="@dimen/heading1_text"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>